k8s/apps/app-exemplo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: apps
  labels:
    app: whoami
spec:
  type: ClusterIP
  selector:
    app: whoami
  ports:
    - name: web
      port: 80
      targetPort: web
      protocol: TCP
